Fix search form submit on Safari

--- a/app/components/header.module.css
+++ b/app/components/header.module.css
@@ -99,7 +99,10 @@
 }
 
 .submit-button {
-    display: none;
+    position: absolute;
+    visibility: hidden;
+    width: 0;
+    height: 0;
 }
 
 .sep {
